# In Cargo.toml, add these fields:
[package]
name = "todo"
version = "0.1.0"
edition = "2021"
description = "A simple CLI todo application"

# Add this section to specify the binary name
[[bin]]
name = "todo"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.9"
chrono = { version = "0.4", features = ["serde"] }
